# ludo2p

./: CMakeLists.txt  CMakeUserPresets.json  Notes.md  ReadMe.md  run.py
archive/: helper.cpp  helper.h
conan/: android  clang  conanfile.txt
consoleapp/: CMakeLists.txt  main.cpp
godot/gludo2p/: project.godot
godot/gludo2p/native/: gui_gdnativelibrary.tres
godot/gludo2p/scenes/: Display.tscn  test.tscn
godot/gludo2p/scenes/scripts/: Display.gdns
godot/gludo2p/stuff/: Def.tres
godot/src_godot/: CMakeLists.txt  DisplayG.cpp  DisplayG.h  GdRegClass.cpp
includes/: Game.h  RegularMaps.h  TestRegularMap.h  core.h  game2p.h  gamestate.h  global.h  graphics_move.h  helper.h  maps.h  piece.h  square.h  u64def.h  visualtest.h
src/: core.cpp  game2p.cpp  gamestate.cpp  global.cpp  graphics_move.cpp  helper.cpp  piece.cpp  square.cpp  visualtest.cpp
tests/: CMakeLists.txt  RegularMapstest.cpp  coretest.cpp  game2ptest.cpp  gamestatetest.cpp  piecetest.cpp  squaretest.cpp
